[package]
name = "interpreter-lox"
version = "0.1.0"
authors = ["Binoy Jayan <binoyjayan@gmail.com>"]
edition = "2018"
default-run = "interpreter-lox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.1"
lazy_static = "1.4.0"
anyhow = "1.0.52"